[package]
name = "stable-id"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/achankf/stable-id"
description = "This crate mainly deals with issuing and maintaining stability of indices."

[profile.release]
opt-level = 3
lto = true
debug = true

[dependencies]
derive-stable-id = "0.1.0"
stable-id-traits = "0.1.1"
